# app-tts-mvp

./: .gitignore  PROBLEMS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
localserver/: openapi.yaml
plugins/: Cargo.toml  README.md  build.bat
plugins-api/: Cargo.toml
plugins-api/src/: lib.rs
plugins/file-logger-plugin/: Cargo.toml
plugins/file-logger-plugin/src/: lib.rs
src/: App.vue  style.css
src-tauri/: Cargo.toml  ICON_SETUP.md  create-icon.ps1  generate-icons.bat  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_player.rs  commands.rs  hook.rs  localhost.rs  main.rs  openai.rs  state.rs  tts.rs
src-tauri/src/plugins/: config.rs  dynamic.rs  manager.rs  mod.rs  types.rs
src-tauri/src/virtual_mic/: audio_settings.rs  device.rs  mod.rs
src/components/: ActiveWindowKeys.vue  AudioOutputDisabledModal.vue  AudioOutputSettings.vue  KeyDisplay.vue  PluginCard.vue  PluginSettings.vue  StatusIndicator.vue  Toast.vue  TtsControls.vue  TtsHistory.vue  TtsPlaybackControls.vue  TtsSettings.vue
src/stores/: keyboard.ts
